--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Welcome in About Page</h1>
-    <h4><a href="index.html">Back To Home Page</a></h4>
+    <h4><a href="index.html">Back To Home Page</a></h4><br>
     <p>For instance, you'll see some content writers create social media copy for small businesses,<br>
      while others write press materials for insurance brands.</p>
 </body>
