--- a/index.html
+++ b/index.html
@@ -6,28 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
  </head>
- <script>
-    
-function loadinformation()
-{
-    var request = new XMLHttpRequest();
- request.open("GET","about.html");           // HTTP Method => GET, POST, CONNECT, TRACK/ URL => File name like about.jsp
- request.onreadystatechange = function()
- {
-    if(this.readyState == 4 &&  this.status == 200)
-    {
-        console.log(this.responseText);
-        document.getElementById("container").innerHTML = this.responseText;
-    }
- }
-}
-
-
- </script>
+ <script src="file1.js"></script>
+ <script src="file2.js"></script>
  <body>
     <h1>Welcome to Home Page</h1>
     <h4><a href="about.html">About Page</a></h4>
-    <button Onclick="loadinformation()">Load About</button>
+    <button Onclick="loadaboutinformation()">Load About</button>
     <div id="container"></div>
  </body>
  </html>
